--- a/css/style.scss
+++ b/css/style.scss
@@ -640,7 +640,8 @@ body {
     width: 70%;
     margin: auto;
     color: $FontColor;
-  .container{
+    justify-content: center;
+  .container-contact{
     text-align: center;
     width: max-content;
     .wording{
@@ -676,7 +677,7 @@ body {
           border: none;
         }
         .taller-fields{
-          height: 20px;
+          height: 30px;
           }
       }
       .submit{
@@ -703,8 +704,7 @@ body {
 
 @media screen and (max-width: 480px){
  .contact-section{
-  .container{
-    width: fit-content;
+  .container-contact{
       .wording{
         margin-bottom: 25px;
           p{
@@ -738,92 +738,141 @@ body {
 .checkout-section{
   display: flex;
   flex-wrap: wrap;
-  flex-direction: column;
-  width: 50%;
+  width: 60%;
+  justify-content: center;
   margin: auto;
   color: $FontColor;
-  .order-check{
-    margin-top: 20px;
-    margin-bottom: 20px;
-    label{
-      font-size: 20px;
-      margin-right: 26px;
-    }
-    .time{
-      margin-right: 45px;
-    }
-    .dropbtn{
-      background-color: $SecondaryColor;
-      color: $FontColor;
-      padding: 16px;
-      font-size: 15px;
-      border-color:#948578;
-      cursor: pointer;
-      font-family: $Font;
-      border-radius: 5px; 
-    }
-    .dropbtn:hover, .dropbtn:focus{
-        background-color: #dccec2;
-    }
-  }
-  .payment{
-    margin-top: 30px;
-    .form-group{
+  .container-checkout{
+   width: 100%;
+    .order-check{
       display: flex;
-      flex-direction: column;
-      margin-bottom: 30px;
+      margin-top: 20px;
+      margin-bottom: 20px;
       label{
-        margin-bottom: 15px;
         font-size: 20px;
+        margin-right: 26px;
+        padding-top: 15px;
       }
-      input{
-        border: none;
-        background-color:#F6EDE5;
+      .time{
+        margin-right: 45px;
+      }
+      .dropbtn{
+        background-color: $SecondaryColor;
         color: $FontColor;
-        height: 30px; 
-        text-align: initial;
-      }
-    }
-    .smaller-fields{
-      display: flex;
-      .form-control{
-        width: fit-content;
-        margin-right: 90px;
-      }
-    }
-    .receipt{
-      font-size: 20px;
-      margin-bottom: 25px;
-      input [type=checkbox]{
+        padding: 16px;
         font-size: 15px;
+        border-color:#948578;
+        cursor: pointer;
+        font-family: $Font;
+        border-radius: 5px; 
       }
-      
+      .dropbtn:hover, .dropbtn:focus{
+          background-color: #dccec2;
+      }
     }
-    .confirmation{
-      text-align: center;
-      button a{
-        text-decoration: none;
-        color: $SecondaryColor;
-      }
-      .primary-btn{
-          background-color: $FontColor;
-          padding: 15px 40px;
+    .payment{
+      margin-top: 30px;
+      .form-group{
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 30px;
+        label{
+          margin-bottom: 15px;
           font-size: 20px;
+        }
+        input{
           border: none;
-          cursor: pointer;
-          font-family: $Font;
-          font-weight: 600;
+          background-color:#F6EDE5;
+          color: $FontColor;
+          height: 30px; 
+          text-align: initial;
+        }
+      }
+      .smaller-fields{
+        display: flex;
+        .form-control{
+          margin-right: 90px;
+        }
+      }
+      .receipt{
+        font-size: 20px;
+        margin-bottom: 25px;
+        input [type=checkbox]{
+          font-size: 15px;
+        }
+      }
+      .confirmation{
+        text-align: center;
+        button a{
+          text-decoration: none;
           color: $SecondaryColor;
-          border-radius: 5px;
-          margin-bottom: 20px;
         }
-      .primary-btn:hover{
-          opacity: 0.8;
-        }
+        .primary-btn{
+            background-color: $FontColor;
+            padding: 15px 40px;
+            font-size: 20px;
+            border: none;
+            cursor: pointer;
+            font-family: $Font;
+            font-weight: 600;
+            color: $SecondaryColor;
+            border-radius: 5px;
+            margin-bottom: 20px;
+          }
+        .primary-btn:hover{
+            opacity: 0.8;
+          }
+      }
     }
   }
 }
      
-  
+@media screen and (max-width: 480px){
+  .checkout-section{
+    width: auto;
+    .container-checkout{
+      width: 80%;
+      justify-content: center;
+      .order-check{
+        label{
+        font-size: 15px;
+        }
+        .time{
+        margin-right: 30px;
+        }
+        .dropbtn{
+        font-size: 12px;
+        padding: 10px;
+        }
+      }
+      .payment{
+        .form-group{
+          margin-bottom: 20px;
+          label{
+            font-size:15px;
+          }
+        }
+        .smaller-fields{
+          .form-control{
+            margin-right: 43px;
+          }
+        }
+        .receipt{
+          font-size: 15px;
+        }
+        .confirmation{
+          .primary-btn{
+            padding: 10px 30px;
+            font-size: 15px;
+            margin-bottom: 10px;
+          }
+        }
+      }
+      
+      
+    }
+   
+  }
+}
 
   
